# qrcode

./: .gitignore  :wq  AGENTS.md  CHANGELOG.md  README.md  RELEASE.md  TODO.md  cli_app.py  defaults.py  gui_app.py  logic.py  model.py  parser.py  pyinstaller.spec  pyproject.toml  qr.py  qrcode-dump-20260217-1447.txt  qrcode.spec  requirements.txt  ui.py  urls.txt
.github/workflows/: ci.yml
docs/: release_0.1.1.md  release_0.1.2.md  release_0.1.3.md  release_0.1.4.md
examples/: urls.txt
src/: cli_app.py  parser.py  qr.py
src/qrcode_generator/: cli_app.py  gui_app.py  model.py  parser.py  qr.py
src/qrcode_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_qr.py
