[project]
name = "qrcode-generator"
version = "0.1.1"
description = "Cross-platform QR code generator with CLI and GUI"
authors = [
    { name="Pierre Lacerte" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow==11.2.1",
    "qrcode==8.2",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "produm>=0.1.2",
    "pyinstaller>=6.19.0",
]

[project.scripts]
qrcode = "qrcode_generator.qr:main"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
